# scikit_build_core_vcpkg

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  vcpkg.json
.github/workflows/: wheels.yml
code/: CMakeLists.txt
code/CoreLib/: CMakeLists.txt
code/CoreLib/CoreLib/: core_lib_math.cpp  core_lib_math.h
code/UnitTests/: CMakeLists.txt  test_core_lib_math.cpp
python/: CMakeLists.txt  main.cpp
src/scikit_build_core_vcpkg/: __init__.py
tests/: test_core.py
