project(CoreLib)

file(GLOB_RECURSE INCLUDE_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
SUBDIRLIST(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

set(INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR} ${INCLUDE_DIRS})
message(STATUS "Include directories: ${INCLUDE_DIRECTORIES}")

add_library(CoreLib ${INCLUDE_FILES} ${SRC_FILES})
target_include_directories(CoreLib SYSTEM BEFORE PUBLIC ${INCLUDE_DIRECTORIES})